--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "next-pwa": "^5.6.0",
     "postcss": "^8.5.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "socket.io": "^4.8.3",
-    "socket.io-client": "^4.8.3"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
